# sparse_ranges

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
benches/: chunk.rs  diff.rs  insert.rs  intersection.rs  union.rs
src/: lib.rs
