[package]
name = "sparse_ranges"
version = "0.1.0"
edition = "2024"
authors = ["The sparse_ranges Contributors"]
description = "Efficient sparse range set operations, particularly designed for HTTP range requests and file offset management"
repository = "https://github.com/OpenTritium/sparse_ranges"
license = "MIT"
keywords = ["ranges", "http", "sparse", "set"]
categories = ["data-structures", "web-programming"]

[dependencies]
http-range-header = { version = "0.4.2", optional = true }
thiserror = "2.0.17"

[dev-dependencies]
range-set-blaze = "0.3.0"
criterion = "0.7.0"
rand = "0.9.2"

[features]
default = ["http"]
http = ["dep:http-range-header"]

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "union"
harness = false

[[bench]]
name = "diff"
harness = false

[[bench]]
name = "chunk"
harness = false
